--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,8 +10,8 @@
           <div>
             <h3 class="product-item-title">ice cream</h3>
             <p class="product-item-subtitle">
-              Soft ice cream with a delicate taste. Made with milk, cream, sugar
-              and natural stabilizer
+              Soft ice cream with a delicate, taste. Made with milk, cream,
+              sugar and natural stabilizer
             </p>
           </div>
 
