--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,16 @@
-@import './common';
-@import './example';
+@import "./common";
+@import "./utils/fonts";
+@import "./utils/colors";
+@import "./utils/breakpoints";
+@import "./utils/reset";
+@import "./utils/visually-hidden";
+@import "./utils/container";
+
+@import "./components/hero-header";
+@import "./components/products";
+@import "./components/about";
+@import "./components/advantages";
+@import "./components/gallery";
+@import "./components/customer-reviews";
+@import "./components/contacts";
+@import "./components/footer";
