--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -11,7 +11,7 @@
             <h3 class="product-item-title">ice cream</h3>
             <p class="product-item-subtitle">
               Soft ice cream with a delicate taste. Made with milk, cream, sugar
-              and natural stabilizer
+              and natural stabilizer.
             </p>
           </div>
 
