--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -19,7 +19,7 @@
             class="footer-contacts-list__link"
           >
             <svg class="footer-contacts-list__icon" width="34" height="34">
-              <use href="./images/footer-icons.svg#icon-git"></use>
+              <use href="./images/icons.svg#icon-github"></use>
             </svg>
           </a>
         </li>
@@ -31,7 +31,7 @@
             class="footer-contacts-list__link"
           >
             <svg class="footer-contacts-list__icon" width="34" height="34">
-              <use href="./images/footer-icons.svg#icon-telegram"></use>
+              <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
@@ -43,7 +43,7 @@
             class="footer-contacts-list__link"
           >
             <svg class="footer-contacts-list__icon" width="34" height="34">
-              <use href="./images/footer-icons.svg#icon-facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
