--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -15,8 +15,11 @@
 
 .footer-title {
   margin-bottom: 60px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 32px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 100px;
   }
   &__text {
     display: flex;
@@ -24,6 +27,9 @@
     gap: 16px;
     @media screen and (min-width: 768px) {
       gap: 8px;
+    }
+    @media screen and (min-width: 1200px) {
+      gap: 14px;
     }
   }
   &__span {
@@ -39,6 +45,11 @@
       line-height: 1.23;
       letter-spacing: 0.04em;
     }
+    @media screen and (min-width: 1200px) {
+      max-width: 504px;
+      font-weight: 400;
+      font-size: 30px;
+    }
   }
   &__span--large {
     max-width: 200px;
@@ -51,6 +62,11 @@
       letter-spacing: 0.06em;
       max-width: 352px;
     }
+    @media screen and (min-width: 1200px) {
+      font-weight: 700;
+      max-width: 504px;
+      font-size: 58px;
+    }
   }
 }
 
@@ -60,6 +76,10 @@
     align-self: center;
     margin: 0;
   }
+  @media screen and (min-width: 1200px) {
+    align-self: auto;
+    padding-top: 18px;
+  }
   &__label {
     color: var(--title-black-color);
     font-weight: 700;
@@ -68,6 +88,10 @@
     text-align: right;
     @media screen and (min-width: 768px) {
       font-size: 14px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 16px;
+      letter-spacing: 0.02em;
     }
   }
   &__link {
@@ -84,41 +108,22 @@
     gap: 30px;
     margin-bottom: 34px;
   }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
+  }
   &__item {
     width: 34px;
     height: 34px;
   }
   &__icon {
     fill: var(--main-background);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__icon:hover,
   &__icon:focus {
     fill: var(--title-white-color);
   }
 }
-
-// .footer-copyright {
-//   position: relative;
-//   padding-bottom: 20px;
-//   &-text {
-//     display: block;
-//     width: 150px;
-//     margin: 0 auto;
-//     color: #7a7a7a;
-//     font-weight: 700;
-//     font-size: 14px;
-//     line-height: 1.52;
-//     text-align: center;
-//   }
-//   &-text::before {
-//     content: '';
-//     position: absolute;
-//     border-top: 1px solid #e1e1e1;
-//     left: 0;
-//     bottom: 82px;
-//     width: 100%;
-//   }
-// }
 
 .footer-copyright {
   padding: 20px 0;
@@ -140,6 +145,9 @@
       line-height: 1.86;
       letter-spacing: 0.02em;
       width: 100%;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 12px;
     }
   }
 }
