--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -27,7 +27,7 @@
             </p>
           </li>
         </ul>
-        <button class="about__btn">
+        <button class="about__btn" data-modal-open>
           Read more
           <svg class="about__icon">
             <use
