--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden" data-modal>
   <div class="read-more-modal">
     <button type="button" data-modal-close></button>
   </div>
