--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 @import "./utils/reset";
 @import "./utils/visually-hidden";
 @import "./utils/container";
+@import "./utils/backdrop";
 
 @import "./components/hero-header";
 @import "./components/products";
@@ -14,3 +15,4 @@
 @import "./components/customer-reviews";
 @import "./components/contacts";
 @import "./components/footer";
+@import "./components/read-more-modal";
