--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -1,5 +1,9 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="read-more-modal">
-    <button type="button" data-modal-close></button>
+    <button type="button" data-modal-close>
+      <svg width="20" height="20">
+        <use href="./images/icons.svg#icon-modal-cross"></use>
+      </svg>
+    </button>
   </div>
 </div>
