--- a/src/sass/components/_customer-reviews.scss
+++ b/src/sass/components/_customer-reviews.scss
@@ -1,55 +1,42 @@
-.gallery {
-  position: relative;
-}
-
 .gallery-customer {
+  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  min-height: 1037px;
-  background-color: aqua;
   background-image: url(/src/images/gallery-customer/gallery__backgroud-mobile.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(/src/images/gallery-customer/gallery__backgroud-mobile2x.jpg);
+  }
+
   @media screen and (min-width: 768px) {
     background-image: url(/src/images/gallery-customer/gallery__background-tablet.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(/src/images/gallery-customer/gallery__backgroud-tablet2x.jpg);
+    }
   }
+
   @media screen and (min-width: 1200px) {
     background-image: url(/src/images/gallery-customer/gallery__backgroud-desktop.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(/src/images/gallery-customer/gallery__backgroud-desktop2x.jpg);
+    }
   }
 }
 
-// .gallery__container,
-// .customer__container {
-//   position: relative;
-//   padding: 0 20px;
-//   margin: auto;
-//   width: 100%;
-//   @media screen and (min-width: 480px) {
-//     width: 480px;
-//   }
-//   @media screen and (min-width: 768px) {
-//     width: 768px;
-//     padding: 0 32px;
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     width: 1200px;
-//     padding: 0 16px;
-//   }
-// }
-
 .gallery__slider {
   position: absolute;
-  top: -118px;
+  top: -32px;
   right: 0;
   margin: auto;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  left: 0px;
+  right: 0px;
+  padding: 0 32px;
   @media screen and (min-width: 768px) {
     top: -144px;
   }
@@ -59,22 +46,35 @@
 }
 
 .gallery__image {
-  width: 100%;
-  padding: 0 20px;
-  @media screen and (min-width: 768px) {
-    padding: 0 32px;
+  margin: auto;
+  &-mob {
+    width: 280px;
+    margin: auto;
+    display: block;
+    border-radius: 8px;
   }
-
-  @media screen and (min-width: 1200px) {
-    padding: 0 16px;
+  &-tab {
+    width: 704px;
+    margin: auto;
+    display: block;
+    border-radius: 18px;
+  }
+  &-desc {
+    width: 1013px;
+    margin: auto;
+    display: block;
+    border-radius: 24px;
   }
 }
-// img {
-//   display: block;
-// }
 
+.slider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .customer {
   padding-top: 178px;
+  align-items: center;
 
   @media screen and (min-width: 768px) {
     padding-top: 283px;
@@ -83,36 +83,36 @@
   @media screen and (min-width: 1200px) {
     padding-top: 464px;
   }
-}
-
-.customer__foto {
-  border-radius: 100%;
-  margin-top: 178px;
-  margin-bottom: 32px;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  @media screen and (min-width: 768px) {
-    margin-top: 283px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-top: 464px;
+  &__foto {
+    border-radius: 100%;
+    margin: auto;
   }
 }
 
 .customer__description {
   background-color: rgba(132, 161, 120, 1);
   border-radius: 10px;
-  padding-left: 39px;
-  padding-right: 39px;
+  padding-left: 40px;
+  padding-right: 40px;
   padding-top: 35px;
   padding-bottom: 35px;
+  margin-top: 32px;
   min-width: 280px;
   @media screen and (min-width: 768px) {
     min-width: 705px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 28px;
+    padding-bottom: 29px;
+    border-radius: 24px;
   }
   @media screen and (min-width: 1200px) {
-    min-width: 968px;
+    max-width: 968px;
+    padding-left: 109px;
+    padding-right: 109px;
+    padding-top: 43px;
+    padding-bottom: 43px;
+    border-radius: 24px;
   }
 }
 
@@ -120,24 +120,26 @@ p.customer__text {
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 2.55;
+  line-height: 255%;
   text-align: center;
   margin-top: 0px;
   margin-bottom: 0px;
+  font-family: 'Montserrat', sans-serif;
   color: rgba(252, 252, 252, 1);
   @media screen and (min-width: 768px) {
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.86;
+    line-height: 186%;
     letter-spacing: 0.04em;
   }
   @media screen and (min-width: 1200px) {
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 186%;
     letter-spacing: 0.04em;
   }
-  font-family: 'Montserrat', sans-serif;
 }
 
 .customer__title {
@@ -146,13 +148,14 @@ p.customer__text {
   line-height: 186%;
   margin-bottom: 417px;
   text-align: center;
+  margin-top: 32px;
+  font-family: 'Montserrat', sans-serif;
   @media screen and (min-width: 768px) {
     font-size: 16px;
     margin-bottom: 423px;
   }
   @media screen and (min-width: 1200px) {
     font-size: 16px;
-    line-height: 30px;
     margin-bottom: 272px;
   }
 }
