Update gallery html

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -9,7 +9,7 @@
               ./images/gallery-customer/gallery__slider-desctop.jpg   1x,
               ./images/gallery-customer/gallery__slider-desctop2x.jpg 2x
             "
-            media="(min-widht: 1200px)"
+            media="(min-width: 1200px)"
           />
           <source
             class="gallery__image-tab"
@@ -17,7 +17,7 @@
               ./images/gallery-customer/gallery__slider-tablet.jpg   1x,
               ./images/gallery-customer/gallery__slider-tablet2x.jpg 2x
             "
-            media="(min-widht: 768px)"
+            media="(min-width: 768px)"
           />
           <source
             class="gallery__image-mob"
@@ -25,7 +25,7 @@
               ./images/gallery-customer/gallery__slider-mobile.jpg   1x,
               ./images/gallery-customer/gallery__slider-mobile2x.jpg 2x
             "
-            media="(max-widht: 767px)"
+            media="(min-width: 320px)"
           />
           <img
             class="gallery__image-desc"
