--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -1,3 +1,39 @@
 <!-- -------------------------------------ingredients-modal--------- -->
 
 <h3>Chololate icecream</h3>
+<picture class="ingredients-picture">
+  <source
+    class="ingredients-img"
+    srcset="
+      ./images/products/ingrade-ice-cream-mob.jpg    1x,
+      ./images/products/ingrade-ice-cream-mob-2x.jpg 2x
+    "
+    media="(min-widht: 768px)"
+  />
+</picture>
+<ul class="ingredients-energy-value">
+  <li>320</li>
+  <li>4g</li>
+  <li>8,2g</li>
+  <li>40,4g</li>
+</ul>
+
+<p>Ingredients</p>
+
+<ul class="ingredients-list">
+  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item"></li>
+</ul>
+
+<ul class="ingredients-weight">
+  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item"></li>
+</ul>
