Update html gallery

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -2,39 +2,115 @@
   <section class="gallery">
     <div class="container">
       <div class="gallery__slider">
-        <picture class="gallery__image">
-          <source
-            class="gallery__image-desc"
-            srcset="
-              ./images/gallery-customer/gallery__slider-desctop.jpg   1x,
-              ./images/gallery-customer/gallery__slider-desctop2x.jpg 2x
-            "
-            media="(min-width: 1200px)"
-          />
-          <source
-            class="gallery__image-tab"
-            srcset="
-              ./images/gallery-customer/gallery__slider-tablet.jpg   1x,
-              ./images/gallery-customer/gallery__slider-tablet2x.jpg 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <source
-            class="gallery__image-mob"
-            srcset="
-              ./images/gallery-customer/gallery__slider-mobile.jpg   1x,
-              ./images/gallery-customer/gallery__slider-mobile2x.jpg 2x
-            "
-            media="(min-width: 320px)"
-          />
-          <img
-            class="gallery__image-desc"
-            src="./images/gallery-customer/gallery__slider-desctop.jpg"
-            alt="ice cream"
-            width="1013px"
-            height="422px"
-          />
-        </picture>
+        <div class="wrapper swiper myS">
+          <ul class="list swiper-wrapper">
+            <li class="item blue swiper-slide">
+              <picture class="gallery__image">
+                <source
+                  class="gallery__image-desc"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-desctop.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-desctop2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  class="gallery__image-tab"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-tablet.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-tablet2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  class="gallery__image-mob"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-mobile.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-mobile2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="gallery__image-desc"
+                  src="./images/gallery-customer/gallery__slider-desctop.jpg"
+                  alt="ice cream"
+                  width="1013px"
+                  height="422px"
+                />
+              </picture>
+            </li>
+            <li class="item red swiper-slide">
+              <picture class="gallery__image">
+                <source
+                  class="gallery__image-desc"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-desctop.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-desctop2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  class="gallery__image-tab"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-tablet.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-tablet2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  class="gallery__image-mob"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-mobile.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-mobile2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="gallery__image-desc"
+                  src="./images/gallery-customer/gallery__slider-desctop.jpg"
+                  alt="ice cream"
+                  width="1013px"
+                  height="422px"
+                />
+              </picture>
+            </li>
+            <li class="item brown swiper-slide">
+              <picture class="gallery__image">
+                <source
+                  class="gallery__image-desc"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-desctop.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-desctop2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  class="gallery__image-tab"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-tablet.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-tablet2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  class="gallery__image-mob"
+                  srcset="
+                    ./images/gallery-customer/gallery__slider-mobile.jpg   1x,
+                    ./images/gallery-customer/gallery__slider-mobile2x.jpg 2x
+                  "
+                  media="(min-width: 320px)"
+                />
+                <img
+                  class="gallery__image-desc"
+                  src="./images/gallery-customer/gallery__slider-desctop.jpg"
+                  alt="ice cream"
+                  width="1013px"
+                  height="422px"
+                />
+              </picture>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
