--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,43 +1,39 @@
-<section class="about">
-  <div class="container">
-    <p class="about__label">Tradition and love</p>
-    <h2 class="about__heading">How it’s made?</h2>
-    <div class="about__wrapper">
-      <div class="about__img-bg"></div>
-      <div class="about__info">
-        <ul class="about__list">
-          <li class="about__item">
-            <p class="about__text">
-              Ice is a place where you will become not only a little happier,
-              but also healthier. Health is the main value for us, and we follow
-              it when creating our handmade desserts.
-            </p>
-          </li>
-          <li class="about__item">
-            <p class="about__text about__text--second">
-              We use traditional recipes and 100% natural ingredients. Our
-              products are so natural that they can be given to children from
-              the age of three years. Sweets lovers can expect 55 types of ice
-              cream, 15 types of coffee and 23 milkshakes.
-            </p>
-          </li>
-          <li class="about__item">
-            <p class="about__text about__text--hidden">
-              This is enough to choose ice cream and coffee for any mood!
-            </p>
-          </li>
-        </ul>
-        <button class="about__btn" data-modal-open>
-          Read more
-          <svg class="about__icon">
-            <use
-              href="./images/icons.svg#icon-arrow"
-              width="12"
-              height="12"
-            ></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-  </div>
+<section class="about" id="how">
+	<div class="container">
+		<p class="about__label">Tradition and love</p>
+		<h2 class="about__heading">How it’s made?</h2>
+		<div class="about__wrapper">
+			<div class="about__img-bg"></div>
+			<div class="about__info">
+				<ul class="about__list">
+					<li class="about__item">
+						<p class="about__text">
+							Ice is a place where you will become not only a little happier,
+							but also healthier. Health is the main value for us, and we follow
+							it when creating our handmade desserts.
+						</p>
+					</li>
+					<li class="about__item">
+						<p class="about__text about__text--second">
+							We use traditional recipes and 100% natural ingredients. Our
+							products are so natural that they can be given to children from
+							the age of three years. Sweets lovers can expect 55 types of ice
+							cream, 15 types of coffee and 23 milkshakes.
+						</p>
+					</li>
+					<li class="about__item">
+						<p class="about__text about__text--hidden">
+							This is enough to choose ice cream and coffee for any mood!
+						</p>
+					</li>
+				</ul>
+				<button class="about__btn" data-modal-open>
+					Read more
+					<svg class="about__icon">
+						<use href="./images/icons.svg#icon-arrow" width="12" height="12"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+	</div>
 </section>
