--- a/src/partials/ingredients-modal.html
+++ b/src/partials/ingredients-modal.html
@@ -21,19 +21,30 @@
 <p>Ingredients</p>
 
 <ul class="ingredients-list">
-  <li class="ingredients-list-item"></li>
-  <li class="ingredients-list-item"></li>
-  <li class="ingredients-list-item"></li>
-  <li class="ingredients-list-item"></li>
-  <li class="ingredients-list-item"></li>
-  <li class="ingredients-list-item"></li>
+  <li class="ingredients-list-item">Milk</li>
+  <li class="ingredients-list-item">Belgian chocolate</li>
+  <li class="ingredients-list-item">Cream</li>
+  <li class="ingredients-list-item">Cocoa powder</li>
+  <li class="ingredients-list-item">Sugar</li>
+  <li class="ingredients-list-item">Vanilla sugar</li>
 </ul>
 
 <ul class="ingredients-weight">
-  <li class="ingredients-weight-item"></li>
-  <li class="ingredients-weight-item"></li>
-  <li class="ingredients-weight-item"></li>
-  <li class="ingredients-weight-item"></li>
-  <li class="ingredients-weight-item"></li>
-  <li class="ingredients-weight-item"></li>
+  <li class="ingredients-weight-item">100ml</li>
+  <li class="ingredients-weight-item">20g</li>
+  <li class="ingredients-weight-item">150 ml</li>
+  <li class="ingredients-weight-item">30g</li>
+  <li class="ingredients-weight-item">40g</li>
+  <li class="ingredients-weight-item">10g</li>
 </ul>
+
+<form action="">
+  <label for=""></label>
+  <input type="name" placeholder="Name" />
+  <label for=""></label>
+  <input type="tel" placeholder="Phone" />
+  <label for=""></label>
+  <textarea name="" id="" cols="30" rows="10" placeholder="Comment"></textarea>
+</form>
+
+<button type="submit">Submit</button>
