--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 <!-- ----------------------------Producrs ---------------- -->
 
-<div class="product-section" id="product">
+<div class="product-section" id="products">
 	<div class="container">
 		<p class="section-text">100% natural</p>
 		<h2 class="section__title">products</h2>
