--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,4 +1,4 @@
-<header class="header" id="home">
+<header class="header">
 	<div class="container header__flex">
 
 		<a class="logo" href="#">
@@ -16,10 +16,10 @@
 
 		<nav>
 			<ul class="nav__list">
-				<li class="nav__item"><a href="#home">Home</a></li>
-				<li class="nav__item"><a href="#how">How it’s made?</a></li>
-				<li class="nav__item"><a href="#product">Our products</a></li>
-				<li class="nav__item"><a href="#contact">Contact</a></li>
+				<li class="nav__item"><a href="#">Home</a></li>
+				<li class="nav__item"><a href="#">How it’s made?</a></li>
+				<li class="nav__item"><a href="#products">Our products</a></li>
+				<li class="nav__item"><a href="#contacts">Contact</a></li>
 			</ul>
 		</nav>
 
