--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -16,8 +16,8 @@
 
 		<nav>
 			<ul class="nav__list">
-				<li class="nav__item"><a href="#">Home</a></li>
-				<li class="nav__item"><a href="#">How it’s made?</a></li>
+				<li class="nav__item"><a href="#home">Home</a></li>
+				<li class="nav__item"><a href="#how">How it’s made?</a></li>
 				<li class="nav__item"><a href="#products">Our products</a></li>
 				<li class="nav__item"><a href="#contacts">Contact</a></li>
 			</ul>
